fix(header): fix toggle button on mobile

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -61,6 +61,7 @@
       gap: 2rem;
       transform: scale(1);
       transition: all 0.3s;
+      font-size: unset;
 
       > div {
         background: $secondary-color;
@@ -104,6 +105,8 @@
 
     &-toggle {
       button {
+        padding: 10%;
+
         &:hover {
           padding: 10%;
         }
